# pystatsd

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
aerostatsd/: tests.py
aerostatsd/client/: base.py  timer.py  udp.py
aerostatsd/defaults/: application.py  django.py  env.py
aerostatsd/django/: _transform.py  middleware.py
statsd/: tests.py
statsd/client/: base.py  stream.py  udp.py
statsd/defaults/: application.py  django.py
statsd/django/: _transform.py  middleware.py
