[metadata]
name = aero-statsd
version = 1.1.0
author = Aerobotics
author_email = nic@aerobotics.com
description = A statsd client with support for Graphite tags
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Aerobotics/pystatsd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
universal = 1